<resources>

    <string name="app_name">Kasi Cuisines</string>

    <string name="slogan">Siyak\'lethela i gaulo!</string>

    <string name="kasi_gaulo">Kasi Gaulo</string>
    <string name="signin_with_email">Signin with email</string>
    <string name="signin_with_phone">Signin with phone</string>
    <string name="sign_up">Sign up</string>
    <string name="home_page_text">Get you favorite kasi meal nearest to you and have it delivered to your door.</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_password">Create Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="register_business">Register</string>
    <string name="hint_mobile_phone_number">Mobile Phone Number</string>
    <string name="hint_store_address">Store address</string>
    <string name="hint_store_name">Store name</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="or">OR</string>
    <string name="sign_in_with_email">email</string>
    <string name="sign_in_with_phone">phone</string>
    <string name="your_address">Your address</string>
    <string name="prompt_password">password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="resend_verification_email">Resend verification email</string>
    <string name="customer_login">Customer Login</string>
    <string name="business_registration">Business Registration</string>
    <string name="business_login">Business Login</string>
    <string name="customer_registration">Customer Registration</string>
    <string name="driver_registration">Driver Registration</string>
    <string-array name="Province">
        <item>Eastern Cape</item>
        <item>Free State</item>
        <item>Gauteng</item>
        <item>KwaZulu Natal</item>
        <item>Limpopo</item>
        <item>Mpumalanga</item>
        <item>Northern Cape</item>
        <item>North West</item>
        <item>Western Cape</item>
    </string-array>
    <string-array name="shipper">
        <item>Shipper 1</item>
        <item>Shipper 2</item>
    </string-array>
</resources>