<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".BusinessLoginEmail">

    <ScrollView
        android:id="@+id/business_login_form"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/b_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/business_login"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="24sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/b_edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />


            <EditText
                android:id="@+id/b_edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/prompt_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />

            <Button
                android:id="@+id/b_sign_in_email_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_red"
                android:text="@string/sign_in"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal|center"
                android:orientation="horizontal">

                <TableRow
                    android:layout_width="90dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="#000000">

                </TableRow>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/or"
                    android:textStyle="bold" />

                <TableRow
                    android:layout_width="90dp"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:background="#000000" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:text="@string/sign_in_with"
                android:textAlignment="center"
                android:textColor="@color/colorGreen"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b_phone_link_button"
                style="?android:textAppearanceSmall"
                android:layout_width="120dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:padding="10dp"
                android:drawableLeft="@drawable/ic_baseline_phone_24"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_blue"
                android:text="@string/sign_in_with_phone"
                android:textStyle="bold" />

                <TextView
                    android:id="@+id/b_sign_up_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/colorBlue"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/b_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_below="@+id/b_link_register"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="Forgot password"
                    android:textColor="@color/colorBlue"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/b_resend_verification_email"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/forgot_password"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/resend_verification_email"
                    android:textColor="@color/colorBlue"
                    android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>