<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="390dp"
        android:background="@drawable/background_shape"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/kasi_gaulo"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <Button
            android:id="@+id/sign_in_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/signin_with_email"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_red" />

        <Button
            android:id="@+id/sign_in_phone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/signin_with_phone"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/ic_baseline_phone_24"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_blue" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_horizontal|center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TableRow
                android:layout_width="90dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="#000000">

            </TableRow>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="OR"
                android:textStyle="bold" />

            <TableRow
                android:layout_width="90dp"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:background="#000000"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_signup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_green" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>