<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".DeliveryLoginPhone">

    <ScrollView
        android:id="@+id/driver_login_form"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/d_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Verify Phone Number"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="24sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/d_country_code"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content">

                </com.hbb20.CountryCodePicker>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/d_phone"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/hint_mobile_phone_number" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/d_send_otp"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_green"
                android:text="Send otp"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />



            <TextView
                android:id="@+id/d_sign_up_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="Don't have an account? Sign up"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal|center"
                android:orientation="horizontal">

                <TableRow
                    android:layout_width="90dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="#000000">

                </TableRow>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/or"
                    android:textStyle="bold" />

                <TableRow
                    android:layout_width="90dp"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:background="#000000" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="Sign in with"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp" />

            <Button
                android:id="@+id/d_email_link_button"
                style="?android:textAppearanceSmall"
                android:layout_width="150dp"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_red"
                android:text="@string/sign_in_with_email"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>